FullSb1-27-apr-15/src/objects/Opportunity_Finance__c.object
<CustomObject>
    <fields>
        <fullName>BBA_Adjustment_Amount_Year_2_BBA__c</fullName>
        <description>BBA Only!</description>
        <label>Adjustment Amount - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Adjustment_Amount_Year_3_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Adjustment Amount - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Banked_Credits_Total__c</fullName>
        <formula>BBA_Banked_Credits_Yr1__c + BBA_Banked_Credits_Yr2__c + BBA_Banked_Credits_Yr3__c + BBA_Banked_Credits_Yr4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banked Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Banked_Credits_Yr1__c</fullName>
        <label>Banked Credits Yr1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Banked_Credits_Yr2__c</fullName>
        <label>Banked Credits Yr2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Banked_Credits_Yr3__c</fullName>
        <label>Banked Credits Yr3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Confirmation_Deposit_Paid__c</fullName>
        <label>Confirmation Deposit Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Confirmation Deposit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Cost_Per_Credit_Yr1__c</fullName>
        <formula>(BBA_Program_Fee_Year_1__c -  BBA_Scholarship_Financial_Aid_Year_1__c 
-  BBA_Dean_Financial_Aid_Year_1__c -  BBA_Adjustment_Amount_Year_1_BBA__c )

/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Credit Yr1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Cost_Per_Credit_Yr2__c</fullName>
        <formula>(BBA_Program_Fee_Year_2__c - BBA_Scholarship_Financial_Aid_Year_2__c 
- BBA_Dean_Financial_Aid_Year_2__c - BBA_Adjustment_Amount_Year_2_BBA__c - R_Scholarship_Financial_Aid_Year_2__c ) 

/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Credit Yr2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Cost_Per_Credit_Yr3__c</fullName>
        <formula>(BBA_Program_Fee_Year_3__c - BBA_Scholarship_Financial_Aid_Year_3__c 
- BBA_Dean_Financial_Aid_Year_3__c - BBA_Adjustment_Amount_Year_3_BBA__c - R_Scholarship_Financial_Aid_Year_3__c) 

/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Credit Yr3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Credits_Owed_to_Customer__c</fullName>
        <formula>BBA_Invoiced_Credits_Total__c +  BBA_Additional_Credits_Taken_Total__c - BBA_Earned_Credits_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Owed to Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Dean_Financial_Aid_Year_1__c</fullName>
        <description>Dean Financial Aid - Year 1 (BBA Only)</description>
        <label>Dean Financial Aid - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Dean_Financial_Aid_Year_2__c</fullName>
        <description>Dean Scholarship - BBA Only</description>
        <label>Dean Financial Aid - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Dean_Financial_Aid_Year_3__c</fullName>
        <description>Dean Financial Aid - Year 3</description>
        <label>Dean Financial Aid - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Earned_Credits_Total__c</fullName>
        <formula>+ BBA_Earned_Credits_Yr1__c + BBA_Earned_Credits_Yr2__c + BBA_Earned_Credits_Yr3__c + BBA_Earned_Credits_Yr4__c + BBA_Transfer_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earned Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Earned_Credits_Yr1__c</fullName>
        <label>Earned Credits Yr1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Earned_Credits_Yr2__c</fullName>
        <label>Earned Credits Yr2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Earned_Credits_Yr3__c</fullName>
        <label>Earned Credits Yr3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Charged_Year_1__c</fullName>
        <formula>(BBA_Additional_Credits_Taken_Yr1__c)* BBA_Cost_Per_Credit_Yr1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extra Credits Charged - Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Charged_Year_2__c</fullName>
        <formula>(BBA_Additional_Credits_Taken_Yr2__c)* BBA_Cost_Per_Credit_Yr2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extra Credits Charged - Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Charged_Year_3__c</fullName>
        <formula>(BBA_Additional_Credits_Taken_Yr3__c)* BBA_Cost_Per_Credit_Yr3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extra Credits Charged - Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Total__c</fullName>
        <formula>BBA_Extra_Credits_Yr1__c + BBA_Extra_Credits_Yr2__c + BBA_Extra_Credits_Yr3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extra Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Yr1__c</fullName>
        <formula>BBA_Withdrawn_Credits_Yr1__c +  BBA_Failed_Credits_Yr1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed/Withdrawn Credits Yr1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Yr2__c</fullName>
        <formula>BBA_Withdrawn_Credits_Yr2__c + BBA_Failed_Credits_Yr2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed/Withdrawn Credits Yr2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Extra_Credits_Yr3__c</fullName>
        <formula>BBA_Withdrawn_Credits_Yr3__c + BBA_Failed_Credits_Yr3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed/Withdrawn Credits Yr3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_FailedWithdrawn_Total__c</fullName>
        <formula>BBA_Failed_Credits_Yr1__c+BBA_Failed_Credits_Yr2__c+BBA_Failed_Credits_Yr3__c+BBA_Failed_Credits_Yr4__c+BBA_Withdrawn_Credits_Yr1__c+BBA_Withdrawn_Credits_Yr2__c+BBA_Withdrawn_Credits_Yr3__c+BBA_Withdrawn_Credits_Yr4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed/Withdrawn Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Failed_Credits_Total__c</fullName>
        <formula>BBA_Failed_Credits_Yr1__c + BBA_Failed_Credits_Yr2__c + BBA_Failed_Credits_Yr3__c + BBA_Failed_Credits_Yr4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Failed_Credits_Yr1__c</fullName>
        <label>Failed Credits Yr1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Failed_Credits_Yr2__c</fullName>
        <label>Failed Credits Yr2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Failed_Credits_Yr3__c</fullName>
        <label>Failed Credits Yr3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Federal_Private_Financing_Total_Yr_1__c</fullName>
        <formula>BBA_US_Federal_Direct_Loan_Year_1__c +  BBA_US_Federal_Parent_Plus_Year_1__c +  BBA_US_Federal_Pell_Year_1__c -  BBA_Total_Disbursement_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total US Financing, Pending Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Financial_Aid_Percent__c</fullName>
        <formula>BBA_Financial_Aid__c / BBA_Program_Fee_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BBA_Financial_Aid__c</fullName>
        <description>Financial Aid - BBA Only</description>
        <label>Financial Aid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_GoEd_Loan_Year_1__c</fullName>
        <label>GoEd Loan - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_GoEd_Loan_Year_2__c</fullName>
        <label>GoEd Loan - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_GoEd_Loan_Year_3__c</fullName>
        <label>GoEd Loan - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Picklist_Year_2__c</fullName>
        <description>This field pick list values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan Picklist - Year 2</label>
        <picklist>
            <picklistValues>
                <fullName>No Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan Flex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Picklist_Year_3__c</fullName>
        <description>This field pick list values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan Picklist - Year 3</label>
        <picklist>
            <picklistValues>
                <fullName>No Installment Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan Flex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Picklist_Year_4__c</fullName>
        <description>Installment Plan - Picklist Year 3 (BBA Only)
This field pick list values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan - Picklist Year 4</label>
        <picklist>
            <picklistValues>
                <fullName>No Installment Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan Flex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Picklist__c</fullName>
        <description>This field pick list values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan Picklist - Year 1</label>
        <picklist>
            <picklistValues>
                <fullName>Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Installment Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan Flex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Year_1__c</fullName>
        <description>Installment Plan - Year 1 (BBA Only)</description>
        <label>Installment Plan - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Year_2__c</fullName>
        <description>Installment Plan - Year 2 (BBA Only)</description>
        <label>Installment Plan - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Year_3__c</fullName>
        <description>Installment Plan - Year 3</description>
        <label>Installment Plan - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Picklist_Year_1__c</fullName>
        <label>Insurance Picklist - Year 1</label>
        <picklist>
            <picklistValues>
                <fullName>Erika Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aetna Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Picklist_Year_2__c</fullName>
        <label>Insurance Picklist - Year 2</label>
        <picklist>
            <picklistValues>
                <fullName>Erika Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aetna Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Picklist_Year_3__c</fullName>
        <label>Insurance Picklist - Year 3</label>
        <picklist>
            <picklistValues>
                <fullName>Erika Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aetna Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Year_1__c</fullName>
        <description>Insurance Year 1</description>
        <label>Insurance - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Year_2__c</fullName>
        <description>Insurance - Year 2 - BBA Only</description>
        <label>Insurance - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Year_3__c</fullName>
        <description>Insurance - Year 3 (BBA Only)</description>
        <label>Insurance - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Invoiced_Credits_Total__c</fullName>
        <formula>BBA_Invoiced_credits_Yr1__c +  BBA_Invoiced_Credits_Yr2__c +  BBA_Invoiced_Credits_Yr3__c +  BBA_Invoiced_credits_Yr4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Invoiced_Credits_Yr2__c</fullName>
        <defaultValue>30</defaultValue>
        <description>This field API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Invoiced Credits Yr2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Invoiced_Credits_Yr3__c</fullName>
        <defaultValue>30</defaultValue>
        <description>This field API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Invoiced Credits Yr3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Invoiced_credits_Yr1__c</fullName>
        <defaultValue>30</defaultValue>
        <description>This field API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Invoiced Credits Yr1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Matriculated_Years_1_to_4__c</fullName>
        <label>Matriculated Yrs 1-4</label>
        <picklist>
            <picklistValues>
                <fullName>Year 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BBA_Merit_Based_Scholarship_Picklist__c</fullName>
        <description>BBA Only</description>
        <label>Merit Based Scholarship Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurial Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Talent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Merit_Based_Scholarship__c</fullName>
        <label>Merit Based Scholarship</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Net_Tuition_Fee__c</fullName>
        <description>This field is using in Agent Invoice page</description>
        <formula>BBA_Program_Fee_Year_1__c-BBA_Scholarship_Financial_Aid_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Tuition Fee BBA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Pre_University_Fee_Paid__c</fullName>
        <label>Pre-University Fee Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Pre-University Fee - Year 1</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Pre_University_Fee_Year_1__c</fullName>
        <label>Pre-University Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Private_Financing_Year_1__c</fullName>
        <label>Private Financing - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Private_Financing_Year_2__c</fullName>
        <label>Private Financing - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Private_Financing_Year_3__c</fullName>
        <label>Private Financing - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_1__c</fullName>
        <description>Program Fee Year 1 - BBA</description>
        <label>Program Fee Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_2__c</fullName>
        <description>Program Fee Year 2 (BBA Only)</description>
        <label>Program Fee Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_3__c</fullName>
        <description>Program Fee Year 3 (BBA Only)</description>
        <label>Program Fee Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Scholarship_Financial_Aid_Total_1__c</fullName>
        <formula>+ BBA_Financial_Aid__c +  BBA_Merit_Based_Scholarship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scholarship &amp; Financial Aid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Scholarship_Financial_Aid_Year_1__c</fullName>
        <formula>if(
AND(not(isnull( BBA_Program_Fee_Year_1__c)), BBA_Program_Fee_Year_1__c&lt;&gt;0),
 BBA_Scholarship_Financial_Aid_Total_1__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship &amp; Financial Aid - Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Scholarship_Financial_Aid_Year_2__c</fullName>
        <formula>if( 
AND(not(isnull( BBA_Program_Fee_Year_2__c)), BBA_Program_Fee_Year_2__c&lt;&gt;0), 
 BBA_Scholarship_Financial_Aid__c * BBA_Program_Fee_Year_2__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship &amp; Financial Aid - Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Scholarship_Financial_Aid_Year_3__c</fullName>
        <formula>if( 
AND(not(isnull( BBA_Program_Fee_Year_3__c)), BBA_Program_Fee_Year_3__c&lt;&gt;0), 
BBA_Scholarship_Financial_Aid__c * BBA_Program_Fee_Year_3__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship &amp; Financial Aid - Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Scholarship_Financial_Aid__c</fullName>
        <formula>+((BBA_Scholarship_Financial_Aid_Total_1__c)/(BBA_Program_Fee_Year_1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship &amp; Financial Aid %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BBA_Scholarship_Percent__c</fullName>
        <formula>BBA_Merit_Based_Scholarship__c / BBA_Program_Fee_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Accommodation_Fee__c</fullName>
        <formula>+ BBA_Accommodation_Fee_Year_1__c + BBA_Accommodation_Fee_Year_2__c + BBA_Accommodation_Fee_Year_3__c + BBA_Accommodation_Fee_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Accommodation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Disbursement_Year_1__c</fullName>
        <label>Total Disbursement - Year 1</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Direct Loan Disbursement 1, Plus Loan Disbursement 1, Pell Grant Disbursement 1</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Disbursement_Year_2__c</fullName>
        <label>Total Disbursement - Year 2</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Disbursement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Year 2</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Disbursement_Year_3__c</fullName>
        <label>Total Disbursement - Year 3</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Disbursement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Year 3</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Due_Year_1__c</fullName>
        <formula>BBA_Total_Fees_Year_1__c - BBA_Total_Payments_Year_1__c - BBA_Total_Payments_AR_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due - Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Due_Year_2__c</fullName>
        <formula>BBA_Total_Fees_Year_2__c - BBA_Total_Payments_AR_Year_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due - Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Due_Year_3__c</fullName>
        <formula>BBA_Total_Fees_Year_3__c - BBA_Total_Payments_AR_Year_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due - Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Fees_Year_1__c</fullName>
        <formula>+BBA_Program_Fee_Year_1__c
+BBA_Accommodation_Fee_Year_1__c
+BBA_Accommodation_Deposit__c
+BBA_Insurance_Year_1__c
+BBA_Installment_Plan_Year_1__c
+BBA_Extra_Credits_Charged_Year_1__c
+BBA_Total_Rotation_Fees_Year_1__c
-BBA_Scholarship_Financial_Aid_Year_1__c
-BBA_Dean_Financial_Aid_Year_1__c
-BBA_US_Federal_Direct_Loan_Year_1__c
-BBA_Private_Financing_Year_1__c
-BBA_Adjustment_Amount_Year_1_BBA__c
-BBA_US_Federal_Parent_Plus_Year_1__c
-BBA_US_Federal_Pell_Year_1__c
-BBA_GoEd_Loan_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Program Fees - Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Fees_Year_2__c</fullName>
        <formula>+BBA_Program_Fee_Year_2__c 
+BBA_Accommodation_Fee_Year_2__c 
+BBA_Accommodation_Deposit_Year_2__c
+BBA_Insurance_Year_2__c 
+BBA_Installment_Plan_Year_2__c 
+BBA_Extra_Credits_Charged_Year_2__c 
+BBA_Total_Rotation_Fees_Year_2__c
-BBA_Scholarship_Financial_Aid_Year_2__c 
-R_Scholarship_Financial_Aid_Year_2__c 
-BBA_Dean_Financial_Aid_Year_2__c 
-BBA_Adjustment_Amount_Year_2_BBA__c 
-BBA_US_Federal_Direct_Loan_Year_2__c 
-BBA_Private_Financing_Year_2__c 
-BBA_US_Federal_Parent_Plus_Year_2__c 
-BBA_US_Federal_Pell_Year_2__c 
-BBA_GoEd_Loan_Year_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Program Fees - Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Fees_Year_3__c</fullName>
        <formula>+BBA_Program_Fee_Year_3__c 
+BBA_Accommodation_Fee_Year_3__c 
+BBA_Accommodation_Deposit_Year_3__c 
+BBA_Insurance_Year_3__c 
+BBA_Installment_Plan_Year_3__c 
+BBA_Extra_Credits_Charged_Year_3__c 
+BBA_Total_Rotation_Fees_Year_3__c
-BBA_Scholarship_Financial_Aid_Year_3__c 
-R_Scholarship_Financial_Aid_Year_2__c 
-BBA_Dean_Financial_Aid_Year_3__c 
-BBA_Adjustment_Amount_Year_3_BBA__c 
-BBA_US_Federal_Direct_Loan_Year_3__c 
-BBA_Private_Financing_Year_3__c 
-BBA_US_Federal_Parent_Plus_Year_3__c 
-BBA_US_Federal_Pell_Year_3__c 
-BBA_GoEd_Loan_Year_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Program Fees - Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Installment_Plan_Fee__c</fullName>
        <formula>+ BBA_Installment_Plan_Year_1__c + BBA_Installment_Plan_Year_2__c + BBA_Installment_Plan_Year_3__c + BBA_Installment_Plan_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Installment Plan Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Insurance_Fee__c</fullName>
        <formula>+ BBA_Insurance_Year_1__c + BBA_Insurance_Year_2__c + BBA_Insurance_Year_3__c + BBA_Installment_Plan_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Insurance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Payments_AR_Year_1__c</fullName>
        <label>Total Payments AR - Year 1</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Program Fee Payment AR, Refund AR, Program Fee Payment AR - Year 1, Writeoff AR, Refund AR - Year 1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>